<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".upload_new_item">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:layout_weight="0.25"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_weight="0.15"
        android:autoText="true"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_weight="0.15"
        android:hint="@string/date"
         />

    <EditText
        android:id="@+id/purchase"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_weight="0.15"
        android:hint="@string/purchase"
         />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:hint="@string/desc"
         />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload" />

</LinearLayout>