<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_add"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/add_db" />

    <EditText
        android:id="@+id/databaseName"
        android:layout_width="408dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/db_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload" />

</LinearLayout>